--- a/OnlineStore/Views/Account/Login.cshtml
+++ b/OnlineStore/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Выполнить вход";
 }
 
-@Html.Partial("HeaderPartial", "Выполнить вход")
+@Html.Partial("_HeaderPartial", "Выполнить вход")
 
 <div class="row">
     <div style="width: 40%; margin: 90px auto;">
