--- a/OnlineStore/Views/Account/Register.cshtml
+++ b/OnlineStore/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Регистрация";
 }
 
-@Html.Partial("HeaderPartial", "Регистрация")
+@Html.Partial("_HeaderPartial", "Регистрация")
 
 
 <div style="width: 40%; margin: 90px auto;">
