--- a/OnlineStore/Views/Cart/Checkout.cshtml
+++ b/OnlineStore/Views/Cart/Checkout.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Checkout";
 }
 
-@Html.Partial("HeaderPartial", "Оформить заказ ")
+@Html.Partial("_HeaderPartial", "Оформить заказ ")
 
 <div class="form__order">
 
