--- a/OnlineStore/Views/Cart/Completed.cshtml
+++ b/OnlineStore/Views/Cart/Completed.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Заказ обработан";
 }
 
-@Html.Partial("HeaderPartial", "Заказ обработан")
+@Html.Partial("_HeaderPartial", "Заказ обработан")
 
 <div style="width: 40%; margin: 90px auto;">
     <h2>Спасибо!</h2>
