--- a/OnlineStore/Views/Manage/ChangePassword.cshtml
+++ b/OnlineStore/Views/Manage/ChangePassword.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Сменить пароль";
 }
 
-@Html.Partial("HeaderPartial", "Сменить пароль")
+@Html.Partial("_HeaderPartial", "Сменить пароль")
 
 
 <div style="width: 40%; margin: 90px auto;">
