--- a/OnlineStore/Views/Manage/ManageLogins.cshtml
+++ b/OnlineStore/Views/Manage/ManageLogins.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Управление внешними именами входа";
 }
 
-@Html.Partial("HeaderPartial", "Управление внешними именами входа")
+@Html.Partial("_HeaderPartial", "Управление внешними именами входа")
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 
