--- a/OnlineStore/Views/SalesPerson/Index.cshtml
+++ b/OnlineStore/Views/SalesPerson/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Заказы";
 }
 
-@Html.Partial("HeaderPartial", "Заказы")
+@Html.Partial("_HeaderPartial", "Заказы")
 
 
 <div class="table-responsive table-striped" style="width: 80%;margin: 150px auto;display: flex;flex-direction: column;justify-content: space-between;">
