--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -39,6 +39,20 @@
                 <a href="#request__application">ПРОДУКЦИЯ</a>
                 <a href="#contacts">ДОСТАВКА</a>
 
+                <ul class="navbar-nav mr-auto" style="padding-left: 10%; padding-bottom: 20px; margin: 0;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown__link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            КАТЕГОРИИ
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            @Html.ActionLink("Bikes", "Category", "Products", new { categoryID = 1 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Components", "Category", "Products", new { categoryID = 2 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Clothing", "Category", "Products", new { categoryID = 3 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Accessories", "Category", "Products", new { categoryID = 4 }, new { @class = "dropdown-item" })
+                        </div>
+                    </li>
+                </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
 
@@ -51,12 +65,28 @@
         <div class="header__nav__text">
             @Html.ActionLink("OnlineStore", "Index", "Home", null, new { @class = "header__nav__text__link" })
 
-            <div class="nav__text__links">
+            <div class="nav__text__links" style="display: flex; align-items: center; justify-content: center;">
                 <a href="#" class="header__nav__link">О НАС</a>
                 <a href="#" class="header__nav__link">
                     ПРОДУКЦИЯ
                 </a>
                 <a href="#" class="header__nav__link">ДОСТАВКА</a>
+
+
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown__link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            КАТЕГОРИИ
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            @Html.ActionLink("Bikes", "Category", "Products", new { categoryID = 1 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Components", "Category", "Products", new { categoryID = 2 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Clothing", "Category", "Products", new { categoryID = 3 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Accessories", "Category", "Products", new { categoryID = 4 }, new { @class = "dropdown-item" })
+                        </div>
+                    </li>
+                </ul>
+
             </div>
 
             <div class="header__nav__cart">
@@ -72,9 +102,9 @@
 
     <div class="header__img">
         <div class="header__img__text">
-            <h1>Товары для всех!</h1>
-            <span>Разнообразный и богатый опыт рамки и место обучения кадров,</span>
-            <span>позволяет оценить значение систем массового участия.</span>
+            <h1 style="margin-bottom: 20px;">Товары для всех!</h1>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</span>
+            <span>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>  
 
             <div class="header__img__request__btn">
                 <button class="header__img__btn__1">
@@ -109,11 +139,15 @@
         <div class="product__items__block__price__div">
             @Html.ActionLink("Подробнее", "Details", "Products", new { id = @item.ProductID }, new { @class = "product__items__block__order" })
 
-            @using (Html.BeginForm("AddToCart", "Cart"))
+            @if (item.Quantity > 0)
             {
-        @Html.Hidden("productId", item.ProductID)
-                            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-                                                <input type="submit" class="product_cart_btn" value="В корзину" />}
+                using (Html.BeginForm("AddToCart", "Cart"))
+                {
+                       @Html.Hidden("productId", item.ProductID)
+                       @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+                       <input type="submit" class="product_cart_btn" value="В корзину" />
+                }
+            }
         </div>
 
 
@@ -132,7 +166,7 @@
 
 </section>
 
-@Html.Partial("ClientRequestPartial")
+@Html.Partial("_ClientRequestPartial")
 
-@Html.Partial("DeliveryPartial")
+@Html.Partial("_DeliveryPartial")
 
