--- a/OnlineStore/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStore/Views/Shared/_HeaderPartial.cshtml
@@ -35,6 +35,20 @@
                 <a href="#request__application">ПРОДУКЦИЯ</a>
                 <a href="#contacts">ДОСТАВКА</a>
 
+                <ul class="navbar-nav mr-auto" style="padding-left: 10%; padding-bottom: 20px; margin: 0;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown__link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            КАТЕГОРИИ
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            @Html.ActionLink("Bikes", "Category", "Products", new { categoryID = 1 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Components", "Category", "Products", new { categoryID = 2 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Clothing", "Category", "Products", new { categoryID = 3 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Accessories", "Category", "Products", new { categoryID = 4 }, new { @class = "dropdown-item" })
+                        </div>
+                    </li>
+                </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -46,12 +60,27 @@
         <div class="header__nav__text">
             @Html.ActionLink("OnlineStore", "Index", "Home", null, new { @class = "header__nav__text__link" })
 
-            <div class="nav__text__links">
+            <div class="nav__text__links" style="display: flex; align-items: center; justify-content: center;">
                 <a href="#" class="header__nav__link">О НАС</a>
                 <a href="#" class="header__nav__link">
                     ПРОДУКЦИЯ
                 </a>
                 <a href="#" class="header__nav__link">ДОСТАВКА</a>
+
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown__link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            КАТЕГОРИИ
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            @Html.ActionLink("Bikes", "Category", "Products", new { categoryID = 1 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Components", "Category", "Products", new { categoryID = 2 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Clothing", "Category", "Products", new { categoryID = 3 }, new { @class = "dropdown-item" })
+                            @Html.ActionLink("Accessories", "Category", "Products", new { categoryID = 4 }, new { @class = "dropdown-item" })
+                        </div>
+                    </li>
+                </ul>
+
             </div>
 
             <div class="header__nav__cart">
