[added] MSMQService and Client [added] SearchProduct page

--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
                 <a href="#services">О НАС</a>
                 <a href="#request__application">ПРОДУКЦИЯ</a>
                 <a href="#contacts">ДОСТАВКА</a>
+                <a href="~/Products/SearchProduct/">Поиск</a>
 
                 <ul class="navbar-nav mr-auto" style="padding-left: 10%; padding-bottom: 20px; margin: 0;">
                     <li class="nav-item dropdown">
@@ -88,6 +89,8 @@
                 </ul>
 
             </div>
+
+            <a href="~/Products/SearchProduct/"><i class="fas fa-search" style="color: #000;"></i></a>
 
             <div class="header__nav__cart">
                 <a href="~/Cart/Index/">
