--- a/OnlineStore/Content/Site.css
+++ b/OnlineStore/Content/Site.css
@@ -929,8 +929,8 @@ product__items__block__price__div {
     right: 500px;
     top: 95px;
     width: 100%;
-    height: 260px;
-    background-color: white;
+    height: 310px;
+    background-color: #ffffff;
     transition: 1s ease;
 }
 
@@ -1078,7 +1078,7 @@ product__items__block__price__div {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 260px;
+        height: 310px;
     }
 
     .non__active__header {
@@ -1222,7 +1222,7 @@ product__items__block__price__div {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 260px;
+        height: 310px;
     }
 
     .non__active__header {
@@ -1413,7 +1413,7 @@ product__items__block__price__div {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 260px;
+        height: 310px;
     }
 
     .non__active__header {
@@ -1629,7 +1629,7 @@ product__items__block__price__div {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 260px;
+        height: 310px;
     }
 
     .mobile__phone__numbers a {
