--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -35,10 +35,10 @@
         <div class="mobile__header__content">
 
             <div class="mobile__header__content__text">
-                <a href="#services">О НАС</a>
-                <a href="#request__application">ПРОДУКЦИЯ</a>
-                <a href="#contacts">ДОСТАВКА</a>
-                <a href="~/Products/SearchProduct/">Поиск</a>
+                <a href="~/Home/">О НАС</a>
+                <a href="~/Home/">ПРОДУКЦИЯ</a>
+                <a href="~/Home/">ДОСТАВКА</a>
+                <a href="~/Home/">Поиск</a>
 
                 <ul class="navbar-nav mr-auto" style="padding-left: 10%; padding-bottom: 20px; margin: 0;">
                     <li class="nav-item dropdown">
@@ -67,11 +67,11 @@
             @Html.ActionLink("OnlineStore", "Index", "Home", null, new { @class = "header__nav__text__link" })
 
             <div class="nav__text__links" style="display: flex; align-items: center; justify-content: center;">
-                <a href="#" class="header__nav__link">О НАС</a>
-                <a href="#" class="header__nav__link">
+                <a href="~/Home/" class="header__nav__link">О НАС</a>
+                <a href="~/Home/" class="header__nav__link">
                     ПРОДУКЦИЯ
                 </a>
-                <a href="#" class="header__nav__link">ДОСТАВКА</a>
+                <a href="~/Home/" class="header__nav__link">ДОСТАВКА</a>
 
 
                 <ul class="navbar-nav mr-auto">
