--- a/OnlineStore/Views/Products/Index.cshtml
+++ b/OnlineStore/Views/Products/Index.cshtml
@@ -16,7 +16,8 @@
             <div class="product__content__block">
                 @if (item.Photo != null)
                 {
-            <img src="/Products/Image?filename=@item.Photo" />                }
+                    <img src="/Products/Image?filename=@item.Photo" />
+                }
 
                 <span class="product__content__block__header">@item.Name</span>
                 <p>
