--- a/OnlineStore/Views/SalesPerson/Index.cshtml
+++ b/OnlineStore/Views/SalesPerson/Index.cshtml
@@ -18,6 +18,7 @@
                 <th class="text-right">Промежуточная сумма</th>
                 <th class="text-right">Итого</th>
                 <th class="text-right"></th>
+                <th class="text-right"></th>
             </tr>
         </thead>
         <tbody>
@@ -37,6 +38,9 @@
                 <td class="text-right"> @item.Status</td>
                 <td class="text-right">@item.SubTotal</td>
                 <td class="text-right">@item.TotalDue</td>
+                <td class="text-right">
+                    @Html.ActionLink("Подробнее", "OrderDetails", "SalesPerson", new { purchaseOrderHeaderID = @item.PurchaseOrderID }, new { @class = "product__items__block__order" })
+                </td>
                 <td class="text-right">
                     @using (Html.BeginForm("SentForShipment", "SalesPerson", FormMethod.Post, new { @class = "text-right" }))
                     {
