--- a/OnlineStore/Views/Manage/Index.cshtml
+++ b/OnlineStore/Views/Manage/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model OnlineStore.Models.IndexViewModel
+﻿@using Microsoft.AspNet.Identity
+@model OnlineStore.Models.IndexViewModel
+
+
 @{
     ViewBag.Title = "Управление";
 }
@@ -28,68 +31,19 @@
             @Model.Logins.Count [
             @Html.ActionLink("Управление", "ManageLogins") ]
         </dd>
-        @*
-            Номера телефонов можно использовать в качестве второго проверочного фактора для системы двухфакторной проверки подлинности.
 
-             В <a href="https://go.microsoft.com/fwlink/?LinkId=403804">этой статье</a>
-                можно узнать, как для этого приложения ASP.NET настроить двухфакторную проверку подлинности с использованием SMS.
-
-             Настроив двухфакторную проверку подлинности, раскомментируйте следующий блок
-        *@
-        @*
-            <dt>Номер телефона:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Удалить" class="btn-link" />]</text>
-                    }
-                }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                }
-            </dd>
-        *@
-        @*<dt>Двухфакторная проверка подлинности:</dt>
-        <dd>
-            <p>
-                Поставщики двухфакторной проверки подлинности не настроены. В <a href="https://go.microsoft.com/fwlink/?LinkId=403804">этой статье</a>
-                можно узнать, как настроить двухфакторную проверку подлинности для этого приложения ASP.NET.
-            </p>*@
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Включено
-                        <input type="submit" value="Отключить" class="btn btn-link" />
-                        </text>
-                    }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Отключено
-                        <input type="submit" value="Включить" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
         </dd>
     </dl>
 
-    <h4>Перейти к подтверждению заказов</h4>
-    <hr />
-    <a href="~/SalesPerson/">Перейти к подтверждению заказов</a>
+    @if (User.IsInRole("manager"))
+    {
+        <h4>Перейти к подтверждению заказов</h4>
+        <hr />
+        <a href="~/SalesPerson/">Перейти к подтверждению заказов</a>
 
-    <h4 style="margin-top: 20px;">Просмотреть все заказы</h4>
-    <hr />
-    <a href="~/SalesPerson/AllOrderHeaders/">Просмотреть все заказы</a>
+        <h4 style="margin-top: 20px;">Просмотреть все заказы</h4>
+        <hr />
+        <a href="~/SalesPerson/AllOrderHeaders/">Просмотреть все заказы</a>
+    }
+
 </div>
