--- a/OnlineStore/Views/Account/Register.cshtml
+++ b/OnlineStore/Views/Account/Register.cshtml
@@ -1,4 +1,7 @@
-﻿@model OnlineStore.Models.RegisterViewModel
+﻿@using OnlineStore.Models.ViewModels;
+
+@model OnlineStore.Models.RegisterViewModel
+
 @{
     ViewBag.Title = "Регистрация";
 }
@@ -31,6 +34,58 @@
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             </div>
         </div>
+
+        <h4>Личные данные.</h4>
+        <hr />
+        <div class="form-group">
+            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.MiddleName, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.LastName, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Address, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.Address, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.PostalCode, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.PostalCode, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.City, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(x => x.City, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Country, new { @class = "col-md-8 control-label" })
+            <div class="col-md-10">
+            @Html.DropDownListFor(m => m.Country,
+            new SelectList(Enum.GetValues(typeof(Country))),
+            "Select Country",
+            new { @class = "form-control" })
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" class="btn btn-primary" value="Регистрация" />
