--- a/OnlineStore/Views/Cart/Checkout.cshtml
+++ b/OnlineStore/Views/Cart/Checkout.cshtml
@@ -43,8 +43,12 @@
 
         <h3>Адрес доставки</h3>
         <div class="form-group">
-            <label>Первый адрес:</label>
+            <label>Адрес:</label>
             @Html.TextBoxFor(x => x.Address, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            <label>Почтовый индекс:</label>
+            @Html.TextBoxFor(x => x.PostalCode, new { @class = "form-control" })
         </div>
         <div class="form-group">
             <label>Город:</label>
