--- a/OnlineStore/Views/Manage/Index.cshtml
+++ b/OnlineStore/Views/Manage/Index.cshtml
@@ -46,7 +46,7 @@
         <a href="~/SalesPerson/AllOrderHeaders/">Просмотреть все заказы</a>
     }
 
-    @if (User.IsInRole("user"))
+    @if (User.IsInRole("customer"))
     {
         <h4 style="margin-top: 20px;">Просмотреть ваши заказы</h4>
         <hr />
