--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
 
             $('.cart_total').load('@Url.Action("ComputeTotalQuantity", "Cart")')
 
+            if ($('.auto-delete')) {
+                $('.auto-delete').click()
+            }
+           
         });
     </script>
 
